--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ markdown_extensions:
       permalink_leading: false # 前置锚点链接（默认值），将锚点放到标题前面
       baselevel: 1 # 最高级别（默认值），往下顺延
       separator: "-" # 分隔符（默认值），替换空格字符
-      toc_depth: 3 # 目录显示级别（默认值）
+      toc_depth: 4 # 目录显示级别
       slugify: !!python/object/apply:pymdownx.slugs.slugify {} # 锚点链接 URL 格式
 
   ###### PyMdown Extensions 配置（markdown 扩展语法）
@@ -73,6 +73,7 @@ markdown_extensions:
   - pymdownx.mark # 文本高亮
   - pymdownx.caret # 文本下划线及上标
   - pymdownx.tilde # 文本删除线及下标
+  - pymdownx.betterem # 斜体与粗体优化，更好的嵌套使用
 
   - pymdownx.arithmatex: # 数学表达式
       generic: true
@@ -95,9 +96,6 @@ markdown_extensions:
       social_url_shorthand: true # 识别社交账号等链接
       social_url_shortener: true # 社交账号等链接简短显示
       normalize_issue_symbols: true # 规范化 Issue、PR 等链接的表示为 #
-
-  - pymdownx.betterem: # 斜体与粗体优化，更好的嵌套使用
-      smart_enable: all # 对斜体和粗体都生效
 
   - pymdownx.critic: # 文本评论
       mode: view # view 显示差异，accept 显示修改后，reject 显示修改前
