--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ markdown_extensions:
       title: Contents / 目录 # 目录标题，material 主题会自动根据语言计算
       anchorlink: false # 锚点链接（默认值），给标题自身锚定链接
       permalink: "&para;" # 锚点符号
-      permalink_title: ⚓ # 锚点链接提示词
+      permalink_title: "" # 锚点链接提示词，空字符表示没有
       permalink_leading: false # 前置锚点链接（默认值），将锚点放到标题前面
       baselevel: 1 # 最高级别（默认值），往下顺延
       separator: "-" # 分隔符（默认值），替换空格字符
@@ -301,24 +301,3 @@ nav:
       - tkintertools 又更新啦！: videos/pages/3.md
       - 碾压 tkinter 的 UI 框架：tkintertools 3.0.0 正式进入 beta 公测阶段: videos/pages/2.md
       - 这还是你记忆中的 tkinter 的程序吗？？？: videos/pages/1.md
-
-  - News / 新闻:
-      - Series 3 / 系列 3:
-          - 3.0.0(pre): news/3.0.0/News.md
-      - Series 2 / 系列 2:
-          - 2.6.21: news/2.6.21/News.md
-          - 2.6.20: news/2.6.20/News.md
-          - 2.6.19: news/2.6.19/News.md
-          - 2.6.18: news/2.6.18/News.md
-          - 2.6.17: news/2.6.17/News.md
-          - 2.6.16: news/2.6.16/News.md
-          - 2.6.15: news/2.6.15/News.md
-          - 2.6.14: news/2.6.14/News.md
-          - 2.6.13: news/2.6.13/News.md
-          - 2.6.12: news/2.6.12/News.md
-          - 2.6.11: news/2.6.11/News.md
-          - 2.6.10: news/2.6.10/News.md
-          - 2.6.9: news/2.6.9/News.md
-          - 2.6.8: news/2.6.8/News.md
-          - 2.6.7: news/2.6.7/News.md
-          - 2.6.6: news/2.6.6/News.md
