--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,9 @@ edit_uri: edit/docs/docs # 编辑地址
 edit_uri_template: null # 编辑地址模板（默认值）
 site_description: Official website of tkintertools # 站点描述
 site_author: Xiaokang2022 # 站点作者
-copyright: Copyright &copy; 2022 Xiaokang2022 # 版权信息
+copyright: >- # 版权信息和 Cookie 设置
+  <a href="#__consent">Cookie Settings / Cookie 设置</a><br/>
+  Copyright &copy; 2022 Xiaokang2022
 remote_branch: gh-pages # GitHub Pages 远程分支名称（默认值）
 remote_name: origin # 远程名称（默认值）
 docs_dir: docs # 文档目录（默认值）
@@ -197,6 +199,7 @@ extra: # 额外设定
     - name: English
       link: /
       lang: en
+  generator: false # 页面底部不显示生成信息
   homepage: . # 左上角徽标链接的地址
   annotate: # 允许代码块非注释内的提示，貌似是可以在代码里面加悬浮提示框，而不只是在注释中（感觉这样不好，虽然我不用，但不能没有）
     json: [.s2]
@@ -226,6 +229,24 @@ extra: # 额外设定
       make our documentation better.
       <br/>
       我们使用 cookie 来识别您的重复访问和偏好，以及衡量我们文档的有效性和用户是否找到他们正在搜索的内容。在您的同意下，您将帮助我们改进我们的文档。
+  analytics: # 谷歌统计
+    provider: google
+    property: G-9YC5SN4ZFD
+    feedback:
+      title: Was this page helpful?<br/>该页面对你有帮助吗？
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: Helpful / 有帮助
+          data: 1
+          note: Thanks for your feedback!<br/>感谢您的反馈！
+        - icon: material/emoticon-neutral-outline
+          name: Just so-so / 还行吧
+          data: 0
+          note: Thanks for your feedback!<br/>感谢您的反馈！
+        - icon: material/emoticon-sad-outline
+          name: Could be improved / 有待改进
+          data: -1
+          note: Thanks for your feedback!<br/>感谢您的反馈！
 
 extra_javascript:
   - extra/javascript/shortcuts.js # 绑定左右键换页的键盘快捷键
