--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -254,6 +254,7 @@ extra_javascript:
   - extra/javascript/typing.js # 打字机效果
   # - extra/javascript/canvas-nest.js # 背景效果
   - extra/javascript/tongji.baidu.js # 百度统计脚本
+  - extra/javascript/time.js # 网站运行时间
   - extra/javascript/mathjax.js # 数学表达式
   - extra/javascript/tablesort.js # 表格排序功能
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js # 数学表达式运行环境
