--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -127,7 +127,7 @@ markdown_extensions:
       slugify: !!python/object/apply:pymdownx.slugs.slugify {}
 
 theme: # 此项各个设定因主题而异
-  custom_dir: ../docs/overrides # 覆盖目录
+  custom_dir: ../overrides # 覆盖目录
   language: en # 主题语言
   palette:
     - media: "(prefers-color-scheme)" # 系统主题
@@ -202,26 +202,6 @@ extra: # 额外设定
           name: Could be improved
           data: -1
           note: Thanks for your feedback!
-
-extra_javascript:
-  - ../docs/extra/javascript/shortcuts.js # 绑定左右键换页的键盘快捷键
-  - ../docs/extra/javascript/mouse.js # 鼠标点击烟花效果
-  - ../docs/extra/javascript/typing-en.js # 打字机效果
-  # - ../docs/extra/javascript/canvas-nest.js # 背景效果
-  - ../docs/extra/javascript/time.js # 网站运行时间
-  - ../docs/extra/javascript/mathjax.js # 数学表达式
-  - ../docs/extra/javascript/tablesort.js # 表格排序功能
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js # 数学表达式运行环境
-  - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js # 表格排序功能运行环境（默认文本类型）
-  - https://unpkg.com/tablesort@5.3.0/dist/sorts/tablesort.date.min.js # 表格排序功能（日期类型）
-  - https://unpkg.com/tablesort@5.3.0/dist/sorts/tablesort.dotsep.min.js # 表格排序功能（点分割类型）
-  - https://unpkg.com/tablesort@5.3.0/dist/sorts/tablesort.filesize.min.js # 表格排序功能（文件大小类型）
-  - https://unpkg.com/tablesort@5.3.0/dist/sorts/tablesort.monthname.min.js # 表格排序功能（月份名称类型）
-  - https://unpkg.com/tablesort@5.3.0/dist/sorts/tablesort.number.min.js # 表格排序功能（数字类型）
-
-extra_css:
-  - ../docs/extra/css/extra.css # 加载自定义的样式
-  - https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-webfont@1.1.0/style.css # 设置字体（霞鹜文楷）
 
 nav:
   - Home:
