--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -136,7 +136,7 @@ markdown_extensions:
 
 theme: # 此项各个设定因主题而异
   name: material # 主题名称
-  custom_dir: docs/overrides # 覆盖目录
+  custom_dir: overrides # 覆盖目录
   language: zh # 主题语言
   features:
     # - header.autohide # 顶栏自动隐藏
@@ -247,13 +247,13 @@ extra: # 额外设定
           note: 感谢您的反馈！
 
 extra_javascript:
-  - extra/javascript/shortcuts.js # 绑定左右键换页的键盘快捷键
-  - extra/javascript/mouse.js # 鼠标点击烟花效果
-  - extra/javascript/typing.js # 打字机效果
-  # - extra/javascript/canvas-nest.js # 背景效果
-  - extra/javascript/time.js # 网站运行时间
-  - extra/javascript/mathjax.js # 数学表达式
-  - extra/javascript/tablesort.js # 表格排序功能
+  - javascript/shortcuts.js # 绑定左右键换页的键盘快捷键
+  - javascript/mouse.js # 鼠标点击烟花效果
+  - javascript/typing.js # 打字机效果
+  # - javascript/canvas-nest.js # 背景效果
+  - javascript/time.js # 网站运行时间
+  - javascript/mathjax.js # 数学表达式
+  - javascript/tablesort.js # 表格排序功能
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js # 数学表达式运行环境
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js # 表格排序功能运行环境（默认文本类型）
   - https://unpkg.com/tablesort@5.3.0/dist/sorts/tablesort.date.min.js # 表格排序功能（日期类型）
@@ -263,7 +263,7 @@ extra_javascript:
   - https://unpkg.com/tablesort@5.3.0/dist/sorts/tablesort.number.min.js # 表格排序功能（数字类型）
 
 extra_css:
-  - extra/css/extra.css # 加载自定义的样式
+  - css/extra.css # 加载自定义的样式
   - https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-webfont@1.1.0/style.css # 设置字体（霞鹜文楷）
 
 plugins:
